--- a/gb/20/1/6/n11772761.md
+++ b/gb/20/1/6/n11772761.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kuujke2745/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kuujke2745/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>围绕习在修例事件中的责任 两种声音针锋相对</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/ff737bce94c47a23b35a13d6e3a9e52c.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/ff737bce94c47a23b35a13d6e3a9e52c.jpg" />
 <h6>骆惠宁出任中联办主任后，1月6日与媒体见面。外界发现，他的腿在颤抖，手势颇像港人抗议时伸出五个手指头，表达五项诉求的手势。（特约记者黄信真摄影／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月07日讯】（大纪元记者张顿综合报导）香港反修例运动的风暴下，中共高层权斗也不断加剧，<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E7%8E%8B%E5%BF%97%E6%B0%91.md">王志民</a>被免去中联办主任一职后，王的一则旧事被重提。围绕<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md">习近平</a>在修例事件中所负的责任问题，两种声音针锋相对。</p>
-<h2><strong><a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E7%8E%8B%E5%BF%97%E6%B0%91.md">王志民</a>去年透露习在修例事件中负主要责任</strong></h2>
-<p>1月4日，香港中联办主任王志民被免职，其职务由上月底刚刚被安排养老的中共全国人大财经委副主任<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E9%AA%86%E6%83%A0%E5%AE%81.md">骆惠宁</a>接替。王志民是香港反修例运动以来，首名出现职务变动的高官。</p>
+<p>【大纪元2020年01月07日讯】（大纪元记者张顿综合报导）香港反修例运动的风暴下，中共高层权斗也不断加剧，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E5%BF%97%E6%B0%91.md#1">王志民</a>被免去中联办主任一职后，王的一则旧事被重提。围绕<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>在修例事件中所负的责任问题，两种声音针锋相对。</p>
+<h2><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E5%BF%97%E6%B0%91.md#1">王志民</a>去年透露习在修例事件中负主要责任</strong></h2>
+<p>1月4日，香港中联办主任王志民被免职，其职务由上月底刚刚被安排养老的中共全国人大财经委副主任<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%AA%86%E6%83%A0%E5%AE%81.md#1">骆惠宁</a>接替。王志民是香港反修例运动以来，首名出现职务变动的高官。</p>
 <p>北京此举引发的震荡仍在持续。</p>
-<p>中共港区前全国政协委员刘梦熊1月4日在港媒的《城市论坛》节目中披露，在处理香港修例事件中，王志民曾经在200多名人大、政协面前三鞠躬拉票，将事件“营造”为中共国家主席<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md">习近平</a>指示的硬任务。</p>
+<p>中共港区前全国政协委员刘梦熊1月4日在港媒的《城市论坛》节目中披露，在处理香港修例事件中，王志民曾经在200多名人大、政协面前三鞠躬拉票，将事件“营造”为中共国家主席<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>指示的硬任务。</p>
 <p>亲共港媒去年5月份的报导称，习近平当时已下批示，务必全力推动达成修例。</p>
 <p>报导还称，当日有份出席中联办会议的人士透露，王发完言后，与七位副主任一起向众人作深鞠躬，有关举动十分罕见，反映港澳工作单位非常重视今次修例的成败，亦借此向众人显明事态之严重性，“必须跟队”。</p>
 <p>与会者指王志民讲话期间多次刻意提到“习主席怎样讲、习主席那样说”，又暗示就修例内容请示过中央高层的看法，“姿态都几明显，就想告诉大家，支持修例是由习近平授意”。</p>
@@ -21,8 +21,8 @@
 <p>刘梦熊1月4日在节目中为习近平开脱，质疑王志民暗示习近平授意修例，这是“假传圣旨”，导致建制派在区议会选举兵败如山倒，王志民有不容推卸的责任。</p>
 <p>总部设在香港的“中国人权民运信息中心”1月5日发消息，与刘梦熊针锋相对：王志民（拉票事件中）讲述的，完全是“习近平办公室”的意见，王志民绝对不是在“假传圣旨”，而正是习近平本人一次又一次地激发了香港矛盾。</p>
 <p>同时，该消息还说，“习派”多名核心成员在中共十九届四中全会上被指责，他们被举报到中纪委的严重问题在四中全会上被“放风”而广为流传。</p>
-<h2><strong><a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md">曾庆红</a>亲信掌控中联办主任一职多年</strong></h2>
-<p>自2003年<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md">曾庆红</a>出任港澳小组组长后，曾庆红势力一直控制香港至今。王志民中联办主任一职被免，<a href="https://github.com/kuujke2745/djy/blob/master/gb/tag/%E9%AA%86%E6%83%A0%E5%AE%81.md">骆惠宁</a>接任，被认为是打破了曾庆红亲信对该职务长达10年的控制。</p>
+<h2><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>亲信掌控中联办主任一职多年</strong></h2>
+<p>自2003年<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>出任港澳小组组长后，曾庆红势力一直控制香港至今。王志民中联办主任一职被免，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%AA%86%E6%83%A0%E5%AE%81.md#1">骆惠宁</a>接任，被认为是打破了曾庆红亲信对该职务长达10年的控制。</p>
 <p>中共当局因应2003年50万人上街反23条立法的七一大游行，成立了由十八个部门组成的中央港澳工作协调小组（港澳小组），时任中共政治局常委曾庆红出任首任组长，全面领导港澳工作，直到2007年10月退休。</p>
 <p>2003年底，曾的亲信彭清华进入香港中联办，担任副主任，又在2009年接任主任直到2012年中共“十八大”。彭清华在香港中联办前后任职近10年，深得曾庆红信任。彭清华在1983年至2003年间在中共中组部工作，曾庆红一度是其顶头上司。</p>
 <p>2012年接手中联办主任一职的是张晓明。张是时任港澳办主任廖晖的秘书、旧部。而廖晖是曾庆红的心腹，被指是曾控制香港的“三驾马车”之一。</p>
@@ -43,41 +43,46 @@
 <p>时事评论员李林一说，骆惠宁曾是两个省的省委书记，属于党务系统的官员。这次骆成为中联办主任，其实是中共“加强党的领导”的一种体现。骆也必然会在任期内贯彻四中全会以及习加强控制香港的意图，未来香港乱局难免。</p>
 <p>港人此前也表示，中共要强推23条，必将会招致更大、更强的反抗，会使香港局势更加恶化。#</p>
 <p>责任编辑：林锐</p>
+<p>&nbsp;</p>
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/6/n11772761.htm">围绕习在修例事件中的责任 两种声音针锋相对</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772655.htm">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772281.htm">骆惠宁赴中联办首日打亲民牌 港人戒备</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770976.htm">骆惠宁主掌中联办 分析：对香港“硬不来”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770074.htm">整顿港澳系统 张晓明或是下一个？</a></li>
-> <li><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768022.md">港中联办主任遭撤换 新任骆惠宁有三大特点</a></li>
-> <li><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770505.md">内幕：王志民为何被撤 港共系统面临清洗</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11775949.htm">伊朗15枚导弹袭美军基地 川普冷静回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11775675.htm">伊朗导弹袭击美军基地 白宫密切关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11775066.htm">暴跌90% 大陆电商巨头市值蒸发173亿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776083.htm">中共央视前主持人芮成钢近况被曝光</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732566.htm">2020金水流年对哪些人最有利？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756326.htm">我儿子见到了他未出生的小妹妹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770292.htm">苏州十全街发生大面积塌陷 店铺已搬空</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772655.htm">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770899.htm">大陆又一平台爆雷 涉资千亿 近二百万人受害</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11775780.htm">【十字路口】台湾大选登场 牵动中港台未来</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11775078.htm">【新闻看点】美再出新招：限制AI等技术出口</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11775729.htm">【拍案惊奇】伊朗开火战云起 伊拉克难玩平衡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770242.htm">在美产子引爱国争议 章子怡发文分享哺乳经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770148.htm">范冰冰亮相美食节 遇见人生中两位重要人物</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770031.htm">获悉陈豪刚从武汉返港 李佳芯活动上大惊失色</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11775057.htm">遭中共封杀后事业转向 黄秋生开办生命训练营</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11771024.htm">胞兄一家3口离世 明道痛发声明：震惊与难过</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/6/n11772655.md#1">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/6/n11772281.md#1">骆惠宁赴中联办首日打亲民牌 港人戒备</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/6/n11770976.md#1">骆惠宁主掌中联办 分析：对香港“硬不来”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/5/n11770074.md#1">整顿港澳系统 张晓明或是下一个？</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772761.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/6/n11772761.htm">围绕习在修例事件中的责任 两种声音针锋相对</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/6/n11772761.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
